cv enregistrer toutes les données

--- a/cv/index.html
+++ b/cv/index.html
@@ -14,8 +14,30 @@
 
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
+    <h1>Cindy Mandigou</h1>
+
+    <h4> Curiosité, Rigueur, Créativité, Adaptation, Relationnel, Dynamique</h4>
+
 
         <h1>Développeur logiciel</h1>
+
+        <h3>Informations</h3>
+
+        <p>16, rue Nationale
+        Le bourneuf
+        49140 La chapelle Saint Laud</p>
+
+        <p>Tél: 06 51 18 29 74</p>
+
+        <p>Email: cindy_mandigou@hotmail.com</p>
+
+        <p>Facebook: Creaportrait</p>
+
+        <p>Née le 21/10/1988</p>
+        <p>27 ans</p>
+
+        <p>Permis - Véhiculée</p>
+        
 
         <h2>Compétences</h2>
 
@@ -29,7 +51,46 @@
         <p>CMS,Photoshop,Photofiltre,Word,Excel,Powerpoint,Moviemaker</p>
 
         <h2>Experiences professionnelles</h2>
-        
+
+        <h3>2015 Tati Angers vendeuse</h3>
+        <p>gestion logiciel encaissement tactile 
+        Implantation, gestion, click and collect, rangement</p>
+        <h3>2015 Ecole maternelle et primaire de Muret animatrice</h3>
+        <p>Mise en place d'ateliers créatifs et ludiques
+        Surveillance des enfants</p>
+        <h3>2012 Brigade de Seiches Gendarme adjointe volontaire</h3>
+        <p>Surveillance et sécuriser les communes
+        Accueil, rédaction de dépôt de plainte, recherches pour les enquetes
+        Logiciel LRPGN, Intranet, Réseaux sociaux, Internet</p>
+        <h3>2011 Carrefour Agen Hôtesse de caisse</h3>
+        <p>Gestion logiciel encaissmeent</p>
+        <h3>2010 Comintes Chalets Gonesse Secrétaire</h3>
+        <p>GEstion dossiers clients, utilisation logiciel entreprise, Word et Excel</p>
+
+        <h2>Formations</h2>
+
+        <h3>2016 POE Mans</h3>
+        <p>Développeur logiciel</p>
+        <h3>2015 BAFA Ifac Toulouse</h3>
+        <p>Petite enfance</p>
+        <h3>2010 LIcence d'arts plastiques et sciences de l'art Sorbonne Paris 15</h3>
+        <p>Sérigraphie, gravure sur métal, architecture, art thérapie, vidéo, dessin...</p>
+        <h3>2007 Bac littéraire option arts plastiques Lycée privé Paris 18</h3>
+        <p>Etude plastique sur l'identité</p>
+
+        <h2>Centres d'intérêt</h2>
+
+        <h3>Dessin</h3>
+        <p>Drapés (sanguine, pierre noire, gouache, craie)
+        Portrait (crayon, pastels)
+        Nu (crayon, fusain)
+        Paysage (peinture, crayon, fusain)</p>
+        <h3>Sport</h3>
+        <p>Renforts musculaires, footing</p>
+
+
+
+
 
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
