--- a/cv/index.html
+++ b/cv/index.html
@@ -23,7 +23,7 @@
 
         <h3>Informations</h3>
 
-        <p>16, rue Nationale
+        <p>16, rue Nationale<
         Le bourneuf
         49140 La chapelle Saint Laud</p>
 
@@ -37,7 +37,7 @@
         <p>27 ans</p>
 
         <p>Permis - Véhiculée</p>
-        
+
 
         <h2>Compétences</h2>
 
