--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <meta charset="utf-8">
+     <link rel="stylesheet" type="text/css" href="style.css">
      <title>test 1</title>
-     </head>
+</head>
      <body>
-     <h1>Les associations</h1>
-     <h2>les couleurs</h2>
-        <ul>
-          <li>rose</li>
-            <li>rouge</li> 
-            <li>bleu</li> 
-             <li>vert</li>
-         </ul>
-           
-     <h2>les objets<br/></h2>
-         <ol>
-         <li>bonbon</li>
-         <li>rose</li>	
-         <li>bleuet</li>
-         <li>pelouse</li>
-         </ol>
-     <h3>les symboles</h3>
-     <ul>
-     <li><strong>rond</strong></li>
-     	<li><em>ovale</em></li>
-     	<li>pyramide</li>
-     	<li>rectangle </li>
-     </ul>
-     <figure>
-     <figcaption>voici mon petit moineau</figcaption> 
-     <img src="http://www.ornithomedia.com/pratique/identification/oiseaux-du-jardin-hiver-mesange-bl.jpg"alt="petit moineau" width="700" />
-     </figure>
-     	<p>les <mark>associations</mark> sont importantes dans la vie de tous les jours.</p>
+     <p>Hilaire Germain Edgar de Gas, dit Edgar Degas, né le 19 juillet 1834 à Paris et mort le 27 septembre 1917 dans la même ville, est un artiste peintre, graveur, sculpteur et photographe. Si le peintre est né sous le patronyme de De Gas, il n’a en réalité fait que reprendre le nom d’origine de sa famille1 en se faisant appeler Degas2. En effet, son grand-père paternel, Hilaire de Gas, a séparé son nom en deux après avoir quitté la France pour l’Italie au moment de la Révolution3.</p>
+     <a href="Hilaire Germain Edgar de Gas, dit Edgar Degas, né le 19 juillet 1834 à Paris et mort le 27 septembre 1917 dans la même ville, est un artiste peintre, graveur, sculpteur et photographe. Si le peintre est né sous le patronyme de De Gas, il n’a en réalité fait que reprendre le nom d’origine de sa famille1 en se faisant appeler Degas2. En effet, son grand-père paternel, Hilaire de Gas, a séparé son nom en deux après avoir quitté la France pour l’Italie au moment de la Révolution3.">portrait de degas</a>
+     <p>La plupart des ouvrages consacrés à Edgar Degas, lorsqu’ils désirent le classer dans l’histoire de l’art, le rattachent au grand mouvement de l’impressionnisme, formé en France dans le dernier tiers du XIXe siècle en réaction à la peinture académique de l’époque. Les artistes qui en font partie, tels Claude Monet, Paul Cézanne, Auguste Renoir, Alfred Sisley, Mary Cassatt, Berthe Morisot ou Camille Pissarro, las d’être régulièrement refusés aux Salons officiels, s’étaient constitués avec Degas en société anonyme afin de montrer leurs œuvres au public.</p>
+     <p>Vous souhaitez voir les tableaux de degas<a href="index2.html"> La page 2</a></p>
+     <p>Si vous voulez en savoir plus rendez vous sur ce lien<a href="https://fr.wikipedia.org/wiki/Edgar_Degas"> wikipedia</a></p>
+
+<section id="social"> 
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
      </body>
 
 </html>
